Remove legacy orders endpoints
